Add a link to tutorial title

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>About</h1>
-    <p>This is a simple project.</p>
+    <p>This is a simple project for tutorial     <a href="http://learnenough.com/git-tutorial">title of the tutorial</a></p>
+
   </body>
 </html>
