--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
   <body>
     <h1>About</h1>
     <p>This is a simple project for tutorial     <a href="http://learnenough.com/git-tutorial">title of the tutorial</a></p>
+    <img src="images/polar_bear.jpg" alt="Polar bear">
 
   </body>
 </html>
