Add polar bear attribution link
The polar bear image requires attribution under the terms of the the
Creative Commons Attribution 2.0 Generic license. This commit adds a
link to the original attribution page at Flickr.

--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <h1>About</h1>
-    <p>This is a simple project for tutorial     <a href="http://learnenough.com/git-tutorial">title of the tutorial</a></p>
-    <img src="images/polar_bear.jpg" alt="Polar bear">
+    <p>This is a simple project for tutorial <a href="http://learnenough.com/git-tutorial">title of the tutorial</a></p>
+    <a href="https://www.flickr.com/photos/puliarfanita/22959238329"><img src="images/polar_bear.jpg" alt="Polar bear"></a>
 
   </body>
 </html>
