--- a/about.html
+++ b/about.html
@@ -8,6 +8,6 @@
     <h1>About</h1>
     <p>This is a simple project for tutorial <a href="http://learnenough.com/git-tutorial">title of the tutorial™</a></p>
     <a href="https://www.flickr.com/photos/puliarfanita/22959238329"><img src="images/polar_bear.jpg" alt="Polar bear"></a>
-
+    <p><a href="index.html">Back</a></p>
   </body>
 </html>
